<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.baseballscorekeeper.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/baseballcrop2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFAFAFA" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Team Groups-->
        <LinearLayout
            android:id="@+id/team_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--TEAM A-->
            <LinearLayout
                android:id="@+id/team_a_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/away_team"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="minusOneRunTeamA"
                        android:text="@string/minus_one"
                        android:textAllCaps="true" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="plusOneRunTeamA"
                        android:text="@string/plus_one"
                        android:textAllCaps="true" />

                </LinearLayout>

            </LinearLayout>

            <!--Vertical line splitting Team A and Team B-->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <!--TEAM B-->
            <LinearLayout
                android:id="@+id/team_b_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/home_team"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="minusOneRunTeamB"
                        android:text="@string/minus_one"
                        android:textAllCaps="true" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="plusOneRunTeamB"
                        android:text="@string/plus_one"
                        android:textAllCaps="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!--Horizontal divider between scoring and Inning-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="inningMinusOne"
                android:text="@string/minus_one"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/current_inning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/inning"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="28sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="inningPlusOne"
                android:text="@string/plus_one"
                android:textAllCaps="true" />

        </LinearLayout>

        <!--Horizontal divider between inning and balls, strikes, outs-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray" />

        <!--BALLS, STRIKES, OUTS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">

            <!--BALLS GROUP-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/balls_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/balls"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/balls_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="ballsMinusOne"
                        android:text="@string/minus_one"
                        android:textAllCaps="true" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="ballsPlusOne"
                        android:text="@string/plus_one"
                        android:textAllCaps="true" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:onClick="ballsClear"
                    android:text="@string/clear"
                    android:textAllCaps="true" />

            </LinearLayout>

            <!--Vertical line between balls and strikes-->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <!--STRIKES GROUP-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/strikes_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/strikes"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/strikes_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="strikesMinusOne"
                        android:text="@string/minus_one"
                        android:textAllCaps="true" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="strikesPlusOne"
                        android:text="@string/plus_one"
                        android:textAllCaps="true" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:onClick="strikesClear"
                    android:text="@string/clear"
                    android:textAllCaps="true" />

            </LinearLayout>

            <!--Vertical line between strikes and outs-->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <!--OUTS GROUP-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/outs_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/outs"
                    android:textAllCaps="true"
                    android:textColor="#616161"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/outs_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="outsMinusOne"
                        android:text="@string/minus_one"
                        android:textAllCaps="true" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:onClick="outsPlusOne"
                        android:text="@string/plus_one"
                        android:textAllCaps="true" />

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:onClick="outsClear"
                    android:text="@string/clear"
                    android:textAllCaps="true" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!--RESET ALL BUTTON-->
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="resetScores"
        android:text="@string/reset_all"
        android:textAllCaps="true" />

</RelativeLayout>
